--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "echarts": "^4.2.1",
     "element-ui": "^2.7.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2"
